terminando maqueta con modales

--- a/assets/sass/blocks/_cards.sass
+++ b/assets/sass/blocks/_cards.sass
@@ -25,7 +25,9 @@ main
       p
         color: $w
     .important
-      width: 80%
+      margin: 50px 0px
+      width: 100%
+      max-width: 500px
       h2
         font-size: 30px
         text-align: center
