--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -4,3 +4,7 @@
 @import ./blocks/firstsection
 @import ./blocks/acerca
 @import ./blocks/cards
+@import ./blocks/info_video
+@import ./blocks/footer
+@import ./blocks/media/tablet
+@import ./blocks/modal
