--- a/assets/sass/blocks/_acerca.sass
+++ b/assets/sass/blocks/_acerca.sass
@@ -1,6 +1,7 @@
 main
+  position: relative
   .info
-    padding: 80px 20px
+    padding: 100px 50px
     flex-flow: row wrap
     justify-content: center
     figure
@@ -13,6 +14,7 @@ main
         width: 100%
     article
       width: 100%
+      max-width: 450px
       text-align: center
       h2
         font-size: 1.5625rem
